advance payment and construction project logic implemented